"""
Split Learning ç³»ç»Ÿç›‘æ§é¢æ¿
å®æ—¶æ˜¾ç¤ºæœåŠ¡å™¨çŠ¶æ€å’Œç»Ÿè®¡ä¿¡æ¯
"""
import sys
import os
import time
import datetime
from rich.console import Console
from rich.table import Table
from rich.live import Live
from rich.layout import Layout
from rich.panel import Panel

# æ·»åŠ è·¯å¾„
current_dir = os.path.dirname(os.path.abspath(__file__))
project_root = os.path.dirname(current_dir)
sys.path.append(os.path.join(project_root, 'splitlearn-comm', 'src'))

from splitlearn_comm import GRPCComputeClient

def get_server_info(client):
    """è·å–æœåŠ¡å™¨ä¿¡æ¯"""
    try:
        info = client.get_service_info()
        if info:
            return info
        return {"status": "Unknown", "error": "No info returned"}
    except Exception as e:
        return {"status": "Error", "error": str(e)}

def create_dashboard(client):
    """åˆ›å»ºç›‘æ§é¢æ¿å¸ƒå±€"""
    info = get_server_info(client)
    
    # 1. æœåŠ¡å™¨æ¦‚è§ˆè¡¨
    server_table = Table(show_header=False, box=None)
    if "error" in info:
        server_table.add_row("[red]è¿æ¥å¤±è´¥[/red]", info["error"])
    else:
        uptime = str(datetime.timedelta(seconds=int(info.get("uptime_seconds", 0))))
        server_table.add_row("æœåŠ¡åç§°", f"[bold cyan]{info.get('service_name', 'Unknown')}[/bold cyan]")
        server_table.add_row("ç‰ˆæœ¬", info.get("version", "Unknown"))
        server_table.add_row("è¿è¡Œè®¾å¤‡", f"[yellow]{info.get('device', 'Unknown')}[/yellow]")
        server_table.add_row("è¿è¡Œæ—¶é—´", uptime)
        server_table.add_row("æ€»å¤„ç†è¯·æ±‚", f"[green]{info.get('total_requests', 0)}[/green]")
        
        # èµ„æºä¿¡æ¯
        custom = info.get("custom_info", {})
        if custom:
            cpu = custom.get("cpu_percent", "N/A")
            mem_mb = custom.get("memory_mb", "N/A")
            mem_pct = custom.get("memory_percent", "N/A")
            server_table.add_row("CPU ä½¿ç”¨ç‡", f"{cpu}%")
            server_table.add_row("å†…å­˜ä½¿ç”¨", f"{mem_mb} MB ({mem_pct}%)")

    # 2. å®¢æˆ·ç«¯è¿æ¥æµ‹è¯•è¡¨
    client_stats = client.get_statistics()
    perf_table = Table(title="å®¢æˆ·ç«¯è§†è§’æ€§èƒ½", show_header=True)
    perf_table.add_column("æŒ‡æ ‡", style="cyan")
    perf_table.add_column("æ•°å€¼", style="magenta")
    
    perf_table.add_row("æœ¬åœ°å·²å‘è¯·æ±‚", str(client_stats.get("total_requests", 0)))
    perf_table.add_row("å¹³å‡ç½‘ç»œå»¶è¿Ÿ", f"{client_stats.get('avg_network_time_ms', 0):.2f} ms")
    perf_table.add_row("å¹³å‡è®¡ç®—è€—æ—¶", f"{client_stats.get('avg_compute_time_ms', 0):.2f} ms")
    perf_table.add_row("å¹³å‡æ€»è€—æ—¶", f"{client_stats.get('avg_total_time_ms', 0):.2f} ms")

    # å¸ƒå±€
    layout = Layout()
    layout.split_column(
        Layout(Panel(server_table, title="ğŸŒ æœåŠ¡å™¨çŠ¶æ€ (Trunk)", border_style="blue")),
        Layout(Panel(perf_table, title="ğŸš€ æ€§èƒ½ç›‘æ§", border_style="green"))
    )
    return layout

def main():
    console = Console()
    console.print("[bold]æ­£åœ¨è¿æ¥ç›‘æ§ç³»ç»Ÿ...[/bold]")
    
    # è¿æ¥æœåŠ¡å™¨
    client = GRPCComputeClient("127.0.0.1:50053", timeout=5.0)
    
    # å°è¯•è¿æ¥
    if not client.connect():
        console.print("[bold red]âŒ æ— æ³•è¿æ¥åˆ°æœåŠ¡å™¨ï¼è¯·ç¡®ä¿ start_server.py æ­£åœ¨è¿è¡Œã€‚[/bold red]")
        return

    console.print("[bold green]âœ… å·²è¿æ¥ï¼å¯åŠ¨å®æ—¶ç›‘æ§... (æŒ‰ Ctrl+C é€€å‡º)[/bold green]")
    time.sleep(1)

    try:
        with Live(create_dashboard(client), refresh_per_second=1) as live:
            while True:
                # æ¨¡æ‹Ÿä¸€æ¬¡å¿ƒè·³è¯·æ±‚æ¥æ›´æ–°å®¢æˆ·ç«¯ç»Ÿè®¡ (å¯é€‰ï¼Œè¿™é‡Œåªè·å– info)
                # client.health_check() 
                
                live.update(create_dashboard(client))
                time.sleep(1)
    except KeyboardInterrupt:
        console.print("\n[bold]ç›‘æ§å·²åœæ­¢[/bold]")

if __name__ == "__main__":
    # å®‰è£… rich åº“ (å¦‚æœè¿˜æ²¡æœ‰)
    try:
        import rich
    except ImportError:
        os.system(f"{sys.executable} -m pip install rich")
        import rich
        
    main()
